--- a/index.html
+++ b/index.html
@@ -233,4 +233,7 @@
 
       <script src="main.js"></script>
 </body>
+<footer>
+    <p>&copy; 2025 Malar. All Rights Reserved.</p>
+</footer>
 </html>                 
