--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <section class="education" id="education">
         <div class="edu">
             <div class="edu-t">
-                <h2>iskool</h2>
+                <h2>school</h2>
                 <div class="time">
                     <i class="fa-solid fa-star"></i>
                     <h4>-2023'</h4>
@@ -86,7 +86,7 @@
         </div>
         <div class="edu">
             <div class="edu-t">
-                <h2>kaleej</h2>
+                <h2>college</h2>
                 <div class="time">
                     <i class="fa-solid fa-star"></i>
                     <h4>-2027'</h4>
@@ -156,13 +156,13 @@
             </td>
             <td class="t-mid"><i class="fa-solid fa-arrow-right"></i></td>
             <td class="t-right">
-                <h2>Cmpany lore</h2>
+                <h2>Company lore</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptates?</p>
             </td>
         </tr>
         <tr>
             <td class="t-left">
-                <h2>Cmpany lore</h2>
+                <h2>Company lore</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptates?</p>
             </td>
             <td class="t-mid"><i class="fa-solid fa-arrow-left"></i></td>
@@ -178,13 +178,13 @@
             </td>
             <td class="t-mid"><i class="fa-solid fa-arrow-right"></i></td>
             <td class="t-right">
-                <h2>Cmpany lore</h2>
+                <h2>Company lore</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptates?</p>
             </td>
         </tr>
         <tr>
             <td class="t-left">
-                <h2>Cmpany lore</h2>
+                <h2>Company lore</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptates?</p>
             </td>
             <td class="t-mid"><i class="fa-solid fa-arrow-left"></i></td>
